design-principles-02/src/main/java/com/farhad/example/design_principles02/dessert/bad/icecream/Peppermint.java
package com.farhad.example.design_principles02.dessert.bad.icecream;

public class Peppermint extends IceCream {

	public Peppermint(String taste) {
		super(taste);
	}

	@Override
	public void serve() {
		// TODO Auto-generated method stub
		throw new UnsupportedOperationException("Unimplemented method 'serve'");
	}

}
